--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "frontend"
-version = "0.2.2-SNAPSHOT"
+version = "0.2.2"
 authors = ["Calm0406 <calm0406@163.com>"]
 edition = "2021"
 description = "angular-example-frontend description."
