--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "frontend"
-version = "0.4.0-SNAPSHOT"
+version = "0.4.0-member"
 authors = ["Calm0406 <calm0406@163.com>"]
 edition = "2024"
 description = "angular-example-frontend description."
